--- a/src/css/dia1.css
+++ b/src/css/dia1.css
@@ -1,81 +1,108 @@
-body{
+body {
   margin: 0px;
   padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100vh;
 }
 
-ul{
+ul {
   position: relative;
   margin: 0px;
   padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
-
-ul li{
+ul li {
   list-style: none;
   position: relative;
   width: 60px;
   height: 60px;
   margin: 0 30px;
-  transform: rotate(-30deg) skew(25deg);
+  -webkit-transform: rotate(-30deg) skew(25deg);
+          transform: rotate(-30deg) skew(25deg);
 }
 
-ul li span{
+ul li span {
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   background: #000;
   color: aliceblue;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
   display: flex !important;
-  align-items: center;
-  justify-content: center !important;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
 }
 
-ul li:hover{
-  box-shadow: -1px 1px 1px rgba(0,0,0,0.1);
+ul li:hover {
+  -webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
-ul li:hover span:nth-child(5){
-  transform: translate(40px, -40px);
+ul li:hover span:nth-child(5) {
+  -webkit-transform: translate(40px, -40px);
+          transform: translate(40px, -40px);
   opacity: 1;
 }
-ul li:hover span:nth-child(4){
-  transform: translate(30px, -30px);
+
+ul li:hover span:nth-child(4) {
+  -webkit-transform: translate(30px, -30px);
+          transform: translate(30px, -30px);
   opacity: .8;
 }
-ul li:hover span:nth-child(3){
-  transform: translate(20px, -20px);
+
+ul li:hover span:nth-child(3) {
+  -webkit-transform: translate(20px, -20px);
+          transform: translate(20px, -20px);
   opacity: .6;
-}ul li:hover span:nth-child(2){
-  transform: translate(10px, -10px);
+}
+
+ul li:hover span:nth-child(2) {
+  -webkit-transform: translate(10px, -10px);
+          transform: translate(10px, -10px);
   opacity: .4;
-}ul li:hover span:nth-child(1){
-  transform: translate(0px, 0px);
+}
+
+ul li:hover span:nth-child(1) {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
   opacity: .2;
 }
 
-ul li:nth-child(1) span
-{
-    background: #3b5999;
+ul li:nth-child(1) span {
+  background: #3b5999;
 }
-ul li:nth-child(2) span
-{
-    background: #55acee;
+
+ul li:nth-child(2) span {
+  background: #55acee;
 }
-ul li:nth-child(3) span
-{
-    background: #dd4b39;
+
+ul li:nth-child(3) span {
+  background: #dd4b39;
 }
-ul li:nth-child(4) span
-{
-    background: #0077b5;
+
+ul li:nth-child(4) span {
+  background: #0077b5;
 }
-ul li:nth-child(5) span
-{
-    background: #e4405f;
+
+ul li:nth-child(5) span {
+  background: #e4405f;
 }
+/*# sourceMappingURL=dia1.css.map */
